...
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <items>
                                <navigationItem title="Arbeitsgänge" id="Uer-9N-CsC"/>
                            </items>
                        </navigationBar>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <items>
                                    <navigationItem title="Düngung" id="sur-gW-9fU">
                                        <barButtonItem key="leftBarButtonItem" title="Zurück" id="zBO-7N-KlE">
                                            <connections>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <items>
                                    <navigationItem title="Entlauben" id="VGQ-UU-A0E">
                                        <barButtonItem key="leftBarButtonItem" title="Zurück" id="LFU-MP-8kb">
                                            <connections>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <items>
                                    <navigationItem title="Pflanzenschutz" id="8zm-EX-aFd">
                                        <barButtonItem key="leftBarButtonItem" title="Zurück" id="99f-0y-dO1">
                                            <connections>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <items>
                                    <navigationItem title="Traubenlese" id="Ph5-lS-718">
                                        <barButtonItem key="leftBarButtonItem" title="Zurück" id="XKr-rL-k79">
                                            <connections>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <items>
                                    <navigationItem title="Karte" id="HXH-Ka-YXU">
                                        <barButtonItem key="leftBarButtonItem" enabled="NO" systemItem="cancel" id="B2u-x9-WfU">
                                            <connections>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Benutzername" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LDb-mE-hNJ">
                                <rect key="frame" x="15" y="311" width="343" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Passwort" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AM1-Wo-tDm">
                                <rect key="frame" x="16" y="383" width="343" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <state key="normal" title="Anmelden">
                                    <color key="titleColor" red="0.5783071568" green="0.01095211011" blue="0.2142856991" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
