...

import UIKit

class OperationDialogs {

    static func presentNoFields(controller: UIViewController) {
        let alert = UIAlertController(title: "Keine Felder vorhanden",
                                      message: "Sie müssen erst Felder auf der Karte einzeichnen bevor Sie " +
                                               "Operationen anlegen können.",
                                      preferredStyle: .alert)

        alert.addAction(UIAlertAction(title: "OK", style: .default))

...
