...
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <items>
                                <navigationItem title="Arbeitsgänge" id="Uer-9N-CsC"/>
                            </items>
                        </navigationBar>
...
                                <items>
                                    <navigationItem title="Düngung" id="sur-gW-9fU">
                                        <barButtonItem key="leftBarButtonItem" title="Zurück" id="zBO-7N-KlE">
                                            <connections>
                                                <action selector="back:" destination="Tq0-nU-pyU" id="hk4-Ja-Czu"/>
...
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <items>
                                    <navigationItem title="Entlauben" id="VGQ-UU-A0E">
                                        <barButtonItem key="leftBarButtonItem" title="Zurück" id="LFU-MP-8kb">
                                            <connections>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Benutzer eintragen..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2L7-Bh-BPb">
                                                <rect key="frame" x="16" y="445.5" width="343" height="30"/>
                                                <nil key="textColor"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Arbeitsstunden eintragen..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4p0-SE-rkn">
                                                <rect key="frame" x="16" y="528" width="343" height="30"/>
                                                <nil key="textColor"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Namen des Feldes eintragen..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RMY-Qx-5mx">
                                        <rect key="frame" x="16" y="52.5" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="fieldName"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Reben Sorte des Feldes eintragen..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QZC-Vx-ZVI">
                                        <rect key="frame" x="16" y="135" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="fieldVineVariety"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q82-Rp-2fT">
                                        <rect key="frame" x="16" y="165" width="343" height="0.0"/>
                                        <state key="normal" title="Fläche löschen"/>
                                        <connections>
                                            <action selector="deleteField:" destination="Vrd-hg-1j0" eventType="primaryActionTriggered" id="izb-Wi-1O7"/>
...
                                                <segment title="Standard"/>
                                                <segment title="Satellit"/>
                                                <segment title="Karte"/>
                                            </segments>
                                            <connections>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Benutzername" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="LDb-mE-hNJ">
                                <rect key="frame" x="16" y="261" width="343" height="31"/>
                                <nil key="textColor"/>
...
                                </connections>
                            </switch>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Passwort" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="AM1-Wo-tDm">
                                <rect key="frame" x="16" y="319" width="343" height="31"/>
                                <nil key="textColor"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                <state key="normal" title="Anmelden">
                                    <color key="titleColor" red="0.32369780539999998" green="0.1063579395" blue="0.574860394" alpha="0.80904858729999996" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
