...
            message = "Möchten Sie das Feld \"\(field.name)\" und \(useCount) dazugehörige Operation(en) wirklich " +
                      "löschen?"
        } else {
            message = "Möchten Sie das Feld \"\(field.name)\" wirklich löschen?"
        }

        let alert = UIAlertController(title: "Löschvorgang bestätigen",
                                      message: message,
                                      preferredStyle: .alert)

        alert.addAction(UIAlertAction(title: "Ja, \"\(field.name)\" löschen",
                                      style: .default,
                                      handler: onConfirmation))
...
